Re-purpose OpenAI example for Coaching tool

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="https://cdn.amplitude.com/libs/analytics-browser-2.11.1-min.js.gz"></script><script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.8.0-min.js.gz"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('e2da45afe61693a28d078f5b3fc6f711', {"autocapture":{"elementInteractions":true}});</script>
     <link rel="icon" href="%PUBLIC_URL%/openai-logomark.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>realtime console</title>
+    <title>Realtime Feedback Practice Tool</title>
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-      rel="stylesheet"
-    />
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+    rel="stylesheet"/>
     <!-- Leaflet / OpenStreetMap -->
     <link
       rel="stylesheet"
